--- a/personal-website/src/components/WelcomeBox.css
+++ b/personal-website/src/components/WelcomeBox.css
@@ -4,7 +4,7 @@ body{
 }
 .window{
     width: 300px;
-    position: fixed;
+    position: absolute;
     right: 400px;
     left: 840px;
     width: 300px;
